force-app/main/default/objects/OrderCommodity__c/OrderCommodity__c.object-meta.xml
<CustomObject>
    <label>Commodity do Pedido</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Commodities do Pedido</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>