force-app/main/default/objects/OrderCommodity__c/fields/BagMargin__c.field-meta.xml
<CustomField>
    <fullName>BagMargin__c</fullName>
    <label>Margem em Sacas</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>