force-app/main/default/objects/OrderCommodity__c/fields/BagQuantity__c.field-meta.xml
<CustomField>
    <fullName>BagQuantity__c</fullName>
    <label>Quantidade de Sacas</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>