force-app/main/default/objects/OrderCommodity__c/fields/CommodityPrice__c.field-meta.xml
<CustomField>
    <fullName>CommodityPrice__c</fullName>
    <label>Preço Commodity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>