force-app/main/default/objects/OrderCommodity__c/fields/DeliveryAddress__c.field-meta.xml
<CustomField>
    <fullName>DeliveryAddress__c</fullName>
    <label>Local de Entrega</label>
    <length>255</length>
    <type>Text</type>
</CustomField>