force-app/main/default/objects/OrderCommodity__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <label>Pedido</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Commodities do Pedido</relationshipLabel>
    <relationshipName>OrderCommodity</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>