force-app/main/default/objects/OrderCommodity__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Material</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Commodities do Pedido</relationshipLabel>
    <relationshipName>OrderCommodities</relationshipName>
    <type>Lookup</type>
</CustomField>