force-app/main/default/objects/OrderCommodity__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <label>Data de Início</label>
    <type>Date</type>
</CustomField>